--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,21 +1,14 @@
 global:
-  scrape_interval: 15s
-  evaluation_interval: 15s
+  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
-  external_labels:
-    monitor: prom-rancher
-
-rule_files:
 
 scrape_configs:
-- job_name: 'prometheus'
-  scrape_interval: 5s
-  scrape_timeout: 10s
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
 
-  target_groups:
-    - targets: ['localhost:9090']
-
-- job_name: 'rancher'
-  file_sd_configs:
-    - names: [ '/prom-rancher-sd-data/*.json' ]
-      refresh_interval: 30s
+  - job_name: 'rancher'
+    file_sd_configs:
+      - files: [ '/prom-rancher-sd-data/*.json' ]
+        refresh_interval: 30s
